修正第九章中的扫描错误

--- a/tex/body/M09.01-Conservation of Angular Momentum.tex
+++ b/tex/body/M09.01-Conservation of Angular Momentum.tex
@@ -28,7 +28,7 @@
 \end{equation*}
 根据矢量的微分法则，上式右边有
 \begin{equation*}
-  m _ 1 r _ { 1 } \times \frac { \dif \vec{v}_ { 1 } } { \dif t } = m _ { 1 } \frac { \dif } { \dif t } ( \vec{r} _ { 1 } \times \vec{v} _ { 1 }) - m _ { 1 } \frac { \dif \vec{r} _ { 1 } } { \dif t} \times \vec{v} _ { 1 }
+  m _ 1 \vec{r} _ { 1 } \times \frac { \dif \vec{v}_ { 1 } } { \dif t } = m _ { 1 } \frac { \dif } { \dif t } ( \vec{r} _ { 1 } \times \vec{v} _ { 1 }) - m _ { 1 } \frac { \dif \vec{r} _ { 1 } } { \dif t} \times \vec{v} _ { 1 }
 \end{equation*}
 % 255.jpg
 \clearpage\mbox{}~\vspace{-2em}
@@ -64,7 +64,7 @@
 故式\eqref{eqn:09.01.06}变成
 \begin{equation}\label{eqn:09.01.07}
   \frac { \dif } { \dif t } ( \vec{r} _ { 1 } \times m _ { 1 } \vec{v} _ { 1 } + \vec{r} _ { 2 } \times m _ { 2 } \vec{v} _ { 2 } ) = 0
-\end{equation}(9.1.7)
+\end{equation}
 我们定义
 \begin{equation}\label{eqn:09.01.08}
   \vec{L} \equiv \vec{r} _ { 1 } \times m _ { 1 } \vec{v} _ { 1 } + \vec{r} _ { 2 } \times m _ { 2 } \vec{v} _ { 2 }
@@ -87,6 +87,7 @@
 \end{equation}
 为单个质点的角动量。对于孤立体系，每个质点的角动量时刻在
 变化，但它们之和却不随时间变化，这就是角动量守恒定律。
+
 很容易将上述角动量守恒定律推广到多质点构成的体系。只
 要一个孤立体系的内力满足牛顿第三定律，用类似的方法可以证
 明
@@ -98,6 +99,7 @@
   \vec{L}=\text{不变量}
 \end{equation}
 其中$\displaystyle \vec{L}=\sum_{i=1}^{n} \vec{l}_i$，是体系中各质点的角动量的和。
+
 角动量守恒也是一个独立的规律，即它并不包含在能量守恒
 或动量守恒规律中。机械能守恒或动量守恒的体系角动量并不一
 定守恒。反之亦然。另外，与动量守恒定律类似，角动量守恒也
