--- a/tex/body/M09.04-Moment of Inertiar.tex
+++ b/tex/body/M09.04-Moment of Inertiar.tex
@@ -5,8 +5,8 @@
   \frac { \dif \vec{l} } { \dif t } = \vec{M}
 \end{equation}
 如果质点在一个平面内运动，取此平面内某一点$ O $为原点(如图
-\ref{fig:09.10}所示)，则$ \vec{ r } $，$ \vec{ p } $总是在此平面内，由定义知，总是垂直于此
-平面的，故$ \vec{M} $也只能总是垂直于此平面，否则的方向将变化，运动
+\ref{fig:09.10}所示)，则$ \vec{ r } $，$ \vec{ p } $总是在此平面内，由定义知，$ \vec{l} $总是垂直于此
+平面的，故$ \vec{M} $也只能总是垂直于此平面，否则$ \vec{l} $的方向将变化，运动
 % 275.jpg
 \clearpage\noindent
 就不可能是平面的。因此，在平面运动的情况\lhbrak 式\eqref{eqn:09.04.01}\rhbrak 可
@@ -64,7 +64,7 @@ $ m $是惯性的度量，在同样力$ F $的
   \end{align}}%
 式中 $ M _ { 1 } $ 、$ M _ { 2 } $分别是质点$ m _ 1 $及$ m _ 2 $所受到的总力矩，既应包括外界
 物体作用在体系中质点上的力矩，也应包括体系内质点间相互作
-用的力矩。前者称为外力矩，后者称为内力矩将式\eqref{eqn:09.04.04}和
+用的力矩。前者称为外力矩，后者称为内力矩。将式\eqref{eqn:09.04.04}和
 式\eqref{eqn:09.04.05}相加，得
 \begin{equation*}
   m _ { 1 } r _ { 1 } ^ { 2 } \frac { \dif \omega _ { 1 } } { \dif t } + m _ { 2 } r _ { 2 } ^ { 2 } \frac { \dif \omega _ { 2 } } { \dif t } = M _ { 1 } + M _ { 2 }
@@ -74,7 +74,7 @@ $ m $是惯性的度量，在同样力$ F $的
 \begin{equation}\label{eqn:09.04.06}
   m _ { 1 } r _ 1 ^ { 2 } \frac { \dif \omega _ { 1 } } { \dif t } + m _ { 2 } r _ 2 ^ { 2 } \frac { \dif \omega _ { 2 } } { \dif t } = M _ { \text { 外 } }
 \end{equation}
-式中$ M _ { \text { 外 } } $外是体系受到的总外力矩。
+式中$ M _ { \text { 外 } } $是体系受到的总外力矩。
 
 用类似的方法，可以把上述结果推广到多质点所构成的体
 系，即有$ n $个质点都绕$ O $作圆周运动，则有
@@ -100,7 +100,7 @@ $ m $是惯性的度量，在同样力$ F $的
   \omega _ { 1 } = \omega _ { 2 } = \cdots = \omega _ { n } = \omega
 \end{equation}
 % 277.jpg
-我们把体系中各质点角速质不相等的情况，称为较差转动体系
+我们把体系中各质点角速质不相等的情况，称为较差转动体系；
 反之，称为刚性转动体系。对于较差转动，式\eqref{eqn:09.04.07}没有多少
 用处，因为在一个方程中含有$ n $个变量，无法求解。要想求解，仍
 必须回到$ n $个方程去。但对刚性转动，由式\eqref{eqn:09.04.08}可将式\eqref{eqn:09.04.07}简化为
@@ -126,7 +126,7 @@ $ m $是惯性的度量，在同样力$ F $的
 
 作为一个例子，我们求地球对自转轴的转动惯量。这里已经
 不是平面问题，但我们可以把地球分成许多垂直于自转轴的薄
-层，每一层仍是平面问题，然后选加在一起，就是整个地球对自
+层，每一层仍是平面问题，然后迭加在一起，就是整个地球对自
 转轴的转动惯量。
 
 为计算方便，假定地球的质量密度是均匀的，其值为$ \rho $。我们
