--- a/tex/body/M09.05-Kinetic Energy of Rotation.tex
+++ b/tex/body/M09.05-Kinetic Energy of Rotation.tex
@@ -2,7 +2,7 @@
 
 一个质点绕固定轴的平面运动，遵从方程式\eqref{eqn:09.04.02}，即
 \begin{equation}\label{eqn:09.05.01}
-  \frac { \dif U } { \dif t } = M
+  \frac { \dif l } { \dif t } = M
 \end{equation}
 当质点与轴的距离$ r $固定时，当然仍有$ l = m r v $。另外，这时我
 们仍可定义角速率$ \omega $为
@@ -50,7 +50,7 @@
   { \left( \frac { 1 } { 2 } m v ^ { 2 } \right) } _ { 2 } - { \left( \frac { 1 } { 2 } m v ^ { 2 } \right) } _ { 1 } = \int _ { 1 } ^ { 2 } F \dif x
 \end{equation*}
 对比二者可见，力矩与力相对应，角位移与位移相对应，转动惯
-量$ I $与质量$ m $相对应，角速率$ \varphi $与速率$ v $相对应。由此，
+量$ I $与质量$ m $相对应，角速率$ \omega $与速率$ v $相对应。由此，
 $ \dfrac { 1 } { 2 } I \omega ^ { 2 } $
 与动能$ \dfrac { 1 } { 2 } m v ^ { 2 } $相对应，我们称前者为转动动能。表面看来，定轴
 转动要比一维直线运动复杂得多，但我们看到两者所满足的方
