修正第五章中的扫描错误

--- a/tex/body/M05.01-The Copernican Principle.tex
+++ b/tex/body/M05.01-The Copernican Principle.tex
@@ -36,7 +36,7 @@
 
 上述种种分析告诉我们，虽然物理学往往着眼于研究局部的
 现象，但是并不能完全地回避整个宇宙的问题。因为整体宇宙性
-质会影响到局部的现象。我们要想建立一个自治的局部现象的理
+质会影响到局部的现象。我们要想建立一个自恰的局部现象的理
 论，也必须对宇宙整体性质给以说明。
 
 本章的目的就是要建立一个恰当的宇宙模型，使它能够说明
