--- a/tex/body/M05.04-Oberst Paradox And Cosmic Expansion.tex
+++ b/tex/body/M05.04-Oberst Paradox And Cosmic Expansion.tex
@@ -94,7 +94,7 @@
 的天体，其光子速度变为负值，亦即这种光子的速度并不是向着
 地球，而是背向地球，故这种光子永远不能到达地球。这时，式
 \eqref{eqn:05.04.03}中的积分限应改成从0到$ c / \left| f \left( t \right) \right| $，积分可成为有限。所
-以，膨胀解可以解决奥伯断佯谬。
+以，膨胀解可以解决奥伯斯佯谬。
 
 总之，从哥白尼原理出发，在牛顿力学的框架内，我们证明
 了宇宙必定在膨胀。
