--- a/tex/body/M05.05-Cosmic Expansion Dynamics.tex
+++ b/tex/body/M05.05-Cosmic Expansion Dynamics.tex
@@ -81,7 +81,7 @@
 \end{equation*}
 则可得到
 \begin{equation*}
-  \frac { \dif } { \dif t } \left[ \frac { 1 } { 2 } \left( - \frac { \dif R } { \dif t } \right) ^ { 2 } - \frac { 4 \uppi G } { 3 } \rho _ { 0 } P _ { 0 } ^ { 3 } \frac { 1 } { R } \right] = 0
+  \frac { \dif } { \dif t } \left[ \frac { 1 } { 2 } \left( \frac { \dif R } { \dif t } \right) ^ { 2 } - \frac { 4 \uppi G } { 3 } \rho _ { 0 } R _ { 0 } ^ { 3 } \frac { 1 } { R } \right] = 0
 \end{equation*}
 积分后得到
 \begin{equation}\label{eqn:05.05.07}
