修正第七章中的扫描错误

--- a/tex/body/M07.01-Elastic Force.tex
+++ b/tex/body/M07.01-Elastic Force.tex
@@ -17,7 +17,7 @@
 \begin{equation}\label{eqn:07.01.01}
   F = - k x
 \end{equation}
-式中$ x $是$ m $对平衡位置的位移，$ k $叫作弹性系数(或倔强系数)，越
+式中$ x $是$ m $对平衡位置的位移，$ k $叫作弹性系数(或倔强系数)，$ k $越
 大表示弹簧越硬。弹簧的力具有式\eqref{eqn:07.01.01}的性质，这一点也叫胡
 克定律。
 
@@ -37,7 +37,7 @@ $ F $总是指向平衡位置，总是力图把质点拉回到平衡位置；
 \begin{wrapfigure}[10]{r}{13em}
   \centering
   \includegraphics{figure/fig07.02}
-  \caption{弹簧}
+  \caption{单摆}
   \label{fig:07.02}
 \end{wrapfigure}
 除了弹簧外，其他的力也可能具有\eqref{eqn:07.01.01}的形式。如图
