--- a/tex/body/M07.02-Vibration Solution.tex
+++ b/tex/body/M07.02-Vibration Solution.tex
@@ -76,14 +76,14 @@
 
 又因$ \omega ^ { 2 } = \dfrac { k } { m } $，故有
 \begin{equation}\label{eqn:07.02.06}
-  T = - \frac { 2 \uppi } { \omega } = 2 \uppi \sqrt { \frac { m } { k } }
+  T = \frac { 2 \uppi } { \omega } = 2 \uppi \sqrt { \frac { m } { k } }
 \end{equation}
 可见，周期仅由振子的质量$ m $和弹簧的弹性系数$ k $来确定，而与振
 子的能量$ E $无关，这是简谐振动的重要特征。振子在单位时间内
 % 204.jpg
 的振动次数，称为频率$ \nu $，由下式给定：
 \begin{equation*}
-  v = \frac { 1 } { T } = \frac { \omega } { 2 \uppi } = \frac { 1 } { 2 \uppi } \sqrt { \frac { k } { m } }
+  \nu = \frac { 1 } { T } = \frac { \omega } { 2 \uppi } = \frac { 1 } { 2 \uppi } \sqrt { \frac { k } { m } }
 \end{equation*}
 所以
 \begin{equation*}
@@ -110,7 +110,7 @@ $ \omega $称为圆频率，它和频率$ \nu $相差一个因子$ 2 \uppi $。
 对比式\eqref{eqn:07.02.04}与式\eqref{eqn:07.02.07}，可以看到，当$ x $到达极大或极
 小值时，即$ x = \pm A $，则速度为零，$ v = 0 $；而当速度达到极大或极小
 值时，即$ v = \pm \omega A $，则位置为零，$ x = 0 $。其实这个性质很容易从
-势能曲线(图74)得到。对于能量为$ E $的振子，它的机械能守恒
+势能曲线(图\ref{fig:07.04})得到。对于能量为$ E $的振子，它的机械能守恒
 方程是
 \begin{equation*}
   \frac { 1 } { 2 } m v ^ { 2 } + \frac { 1 } { 2 } k x ^ { 2 } = E
