--- a/tex/body/M07.04-Damped Vibration And Q Value.tex
+++ b/tex/body/M07.04-Damped Vibration And Q Value.tex
@@ -31,7 +31,7 @@
 如果每周期消耗的能量$ \left( \Delta E \right) _ { T } $在总能量$ E $中占的份额越小，则表
 示阻力越小，因而振动衰减越慢，越接近于理想简谐振动。这使
 我们看到，可以用总能量$ E $与耗损能量$ \left( \Delta E \right) _ { T } $之比值$ \dfrac { E } { \left( \Delta E \right) _ { T } } $来作
-为能量衰减的度量通常，我们把比值$ \dfrac { E } { \left( \Delta E \right) _ { T } } $的$ 2 \uppi $倍定义为振
+为能量衰减的度量。通常，我们把比值$ \dfrac { E } { \left( \Delta E \right) _ { T } } $的$ 2 \uppi $倍定义为振
 动系统的$ Q $值，也叫做品质因数，即
 \begin{equation}\label{eqn:07.04.01}
   Q = 2 \uppi \frac { E } { \left( \Delta E \right) _ { T } }
@@ -43,7 +43,7 @@
 间变化，故由定义\lhbrak 式\ref{eqn:07.04.01}\rhbrak ，$ Q $可能是随时间变化的量。但是，
 实际上有些阻尼振动过程一周期所“支出”的能量$ \left( \Delta E \right) _ { T } $与“库
 存”的总能量$ E $成正比，$ E $越大，$ \left( \Delta E \right) _ { T } $也越大。在这种情况下，
-Q值与时间无关，是个常数。
+$ Q $值与时间无关，是个常数。
 
 现在我们讨论$ Q $为常数的阻尼振动的特征。我们知道，能量
 % 208.jpg
@@ -122,14 +122,14 @@ $ - \Delta A $就是在一个周期的时间里，振子损失的能量。即
 \begin{equation}\label{eqn:07.04.08}
   \frac { \dif ^ { 2 } x } { \dif t ^ { 2 } } + 2 \beta \frac { \dif x } { \dif t } + \omega _ { 0 } ^ { 2 } x = 0
 \end{equation}
-这就是阻尼振的基本方程。当$ \beta < \omega _ { 0 } $时，它的解为
+这就是阻尼振动的基本方程。当$ \beta < \omega _ { 0 } $时，它的解为
 \begin{equation}\label{eqn:07.04.09}
   x = A _ { 0 } \e ^ { - \beta t } \cos \left( \omega t + \varphi _ { 0 } \right)
 \end{equation}
 其中$\omega = \sqrt { \omega _ 0 ^ { 2 } - \beta ^ { 2 } } $， 式\eqref{eqn:07.04.09}是阻尼振动的振动解，与理想的
 简谐振动相比较，它只多了一个因子$ \e ^ { - \beta t } $，这表示振幅是以指数形
 % 210.jpg
-式域的。式\eqref{eqn:07.04.09}的$ x \mathdash t $曲线，即有图78的形式。另外应注意
+式衰减的。式\eqref{eqn:07.04.09}的$ x \mathdash t $曲线，即有图\ref{fig:07.08}的形式。另外应注意
 到，阻力不仅对振幅有影响，而且也影响到周期。当$ \beta = 0 $时，振
 动周期为$ T = \dfrac { 2 \uppi } { \omega _ { 0 } } $；$ \beta \ne 0 $有阻力时，周期变为
 $ T = \dfrac { 2 \uppi } { \sqrt { \omega _ { 0 } ^ { 2 } - \beta ^ { 2 } } } $
