--- a/tex/body/M07.06-Simple Harmonic Vibration Synthesis.tex
+++ b/tex/body/M07.06-Simple Harmonic Vibration Synthesis.tex
@@ -107,16 +107,16 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 利用三角公式，式\eqref{eqn:07.06.08}可以改写成
 \begin{equation*}
   \begin{split}
-    x &= 2 A \cos \left( \frac { \omega _ { 1 } - \omega _ { 2 } } { 2 } t \right) \cos \left( \frac { \omega _ { 1 } + \omega _ { 2 } t } { 2 } t + \varphi \right) \\
+    x &= 2 A \cos \left( \frac { \omega _ { 1 } - \omega _ { 2 } } { 2 } t \right) \cos \left( \frac { \omega _ { 1 } + \omega _ { 2 } } { 2 } t + \varphi \right) \\
     & \approx 2 A \cos \left( \frac { \omega _ { 1 } - \omega _ { 2 } } { 2 } t \right) \cos \left( \omega _ { 1 } t + \varphi \right)
   \end{split}
 \end{equation*}
 这个公式的物理意义是，质点仍作频率为$\omega_{ 1 }$的简谐振动，但它的
 振幅不是常数，而是$ \left| 2 A \cos \dfrac { \omega _ { 1 } - \omega _ { 2 } } { 2 } t \right| $，即振幅也是随时间周期
 变化的。振幅的平方正比于振动能量，所以，这种振动具有周期
-生的强弱变化，这种现象称为拍。振幅的变化周期即为拍的周期。
+性的强弱变化，这种现象称为拍。振幅的变化周期即为拍的周期。
 由于振幅只涉及$ \cos \dfrac { \omega _ { 1 } - \omega _ { 2 } } { 2 } t $的绝对值，所以，单位时间中的振
-福变化次数等于的$ \dfrac { 1 } { 2 \uppi } - \dfrac { \left| \omega _ { 1 } - \omega _ { 2 } \right| } { 2 } $两倍，故拍的周期为
+幅变化次数等于$ \dfrac { 1 } { 2 \uppi } \dfrac { \left| \omega _ { 1 } - \omega _ { 2 } \right| } { 2 } $的两倍，故拍的周期为
 \begin{equation*}
   T _ { \text { 拍 } } = \frac { 2 \uppi } { \left| \omega _ { 1 } - \omega _ { 2 } \right| }
 \end{equation*}
@@ -138,7 +138,7 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 \begin{equation}\label{eqn:07.06.10}
   \begin{cases}
     x = r _ { 0 } \cos \left( \omega t + \varphi _ { 1 } \right) \\
-    y = r _ { 0 } \sin \left( \omega t + \varphi _ { 2 } \right)
+    y = r _ { 0 } \cos \left( \omega t + \varphi _ { 2 } \right)
   \end{cases}
 \end{equation}
 这时，运动的形态完全取决于$ \varphi _ { 1 } $， $ \varphi _ { 2 } $的相互关系。
@@ -164,7 +164,7 @@ $ \dfrac { 1 } { 1 } : \dfrac { 1 } { 2 } : \dfrac { 1 } { 3 }
 \begin{align*}
   \beforetext{则} r = \sqrt { 2 } r _ { 0 } \cos \left( \omega t + \varphi _ { 1 } \right)
 \end{align*}
-故质点是沿着图712(a)的斜线方向作简谐振动。
+故质点是沿着图\ref{fig:07.12}(a)的斜线方向作简谐振动。
 
 为了讨论一般情况，我们可以从式\eqref{eqn:07.06.10}得出
 \begin{equation}\label{eqn:07.06.11}
