修正第一章中的扫描错误

--- a/tex/body/M01.02-Zeno Paradox And Measurement Of Time.tex
+++ b/tex/body/M01.02-Zeno Paradox And Measurement Of Time.tex
@@ -51,7 +51,7 @@ $t'$，阿基里斯总是落在龟的后面。这就是芝诺的结论。
   t^{\prime}=\frac{1}{\ln \left(v_{2} / v_{1}\right)} \ln \left[1-\left(\frac{v_{1}-v_{2}}{L}\right) t\right]
   \label{eqn:01.02.03}
 \end{equation}%
-式\eqref{eqn:01.02.02}或式\eqref{eqn:01.02.03}称为芝诺变换。它给出的$t'$与t的关系。在
+式\eqref{eqn:01.02.02}或式\eqref{eqn:01.02.03}称为芝诺变换。它给出的$t'$与$t$的关系。在
 图\ref{fig:01.03}~中画出。
 
 \begin{table}[!h]
@@ -78,7 +78,7 @@ $t'$，阿基里斯总是落在龟的后面。这就是芝诺的结论。
 $t'\rightarrow\infty$。所以，当芝诺时$t'$从零变化到无限时，它只覆盖了普通时
 $t$上的一个有限范围，即从零到$ L/\left(v_1-v_2\right) $。
 
-因此，芝诺佯谬之“佯”，是由于芝诺把永远理解为$t'\rightarrow\infty$。
+因此，芝诺佯谬之“佯”，是由于芝诺把\CJKunderdot{永远}理解为$t'\rightarrow\infty$。
 他认为$t'\rightarrow\infty$之后就没有时间了，故$t'\rightarrow\infty$相当于永远。实际上，
 从图\ref{fig:01.03} 看到，在芝诺时$ t' $到达无限之后。还是有时间的。但是，
 在该范围，即$ t>L/\left(v_1-v_2\right) $，用芝诺钟已经无法度量它们了。简
