--- a/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
+++ b/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
@@ -2,7 +2,7 @@
 
 \ziju{-0.02}我们现在来推广上节关于直线运动的速度的概念。按图1.11，
 质点作曲线运动，在时刻$t_1$，质点位置矢量为$\vec{r}\left(t_1\right)$，在时刻$t_2$，
-位置矢量为$\vec{r}\left(t_2\right)$，则定义在$t_1$到$t_1$间隔中质点$ A $的平均速度为
+位置矢量为$\vec{r}\left(t_2\right)$，则定义在$t_1$到$t_2$间隔中质点$ A $的平均速度为
 \begin{equation}\label{eqn:01.07.01}
   \langle \vec{v} \rangle_{t_1\rightarrow t_2}=\frac{\vec{r}\left(t_2\right)-\vec{r}\left(t_1\right)}{t_2-t_1}=\frac{\Delta \vec{r}}{\Delta t}
 \end{equation}
@@ -39,7 +39,7 @@ $\vec{r}\left(t\right)$。在\eqref{eqn:01.07.01}~中，$\Delta t=t_2-t_1$，$\D
 \begin{equation}\label{eqn:01.07.03}
   \vec{v}\left(t\right)=\frac{\dif x\left(t\right)}{\dif t} \vec{i}+\frac{\dif y\left(t\right)}{\dif t} \vec{j}+\frac{\dif z\left(t\right)}{\dif t} \vec{k}
 \end{equation}
-所以三个坐标函数$x\left(t\right)$，$y\left(t\right)$，$z\left(t\right)$对时间t的导数分别是速度矢
+所以三个坐标函数$x\left(t\right)$，$y\left(t\right)$，$z\left(t\right)$对时间$t$的导数分别是速度矢
 量在三个坐标轴方向的分量:
 \begin{equation}\label{eqn:01.07.04}
   v_{x}=\frac{\dif x\left(t\right)}{\dif t}, ~ v_{y}=\frac{\dif y\left(t\right)}{\dif t}, ~ v_{z}=\frac{\dif z\left(t\right)}{\dif t}
@@ -62,7 +62,7 @@ $\vec{r}\left(t\right)$。在\eqref{eqn:01.07.01}~中，$\Delta t=t_2-t_1$，$\D
 \setlength{\mathindent}{15em}
 \begin{equation*}
   \begin{aligned}
-    v\equiv |\vec{v}| & =\left|\lim _{\Delta t \rightarrow 0} \frac{\Delta \vec{r}\left(t\right)}{\Delta t}\right| \\
+    v\equiv |\vec{v}| & =\left|\lim _{\Delta t \rightarrow 0} \frac{\Delta \vec{r}}{\Delta t}\right| \\
                       & =\lim _{\Delta t \rightarrow 0} \frac{|\Delta \vec{r}|}{\Delta t}
   \end{aligned}
 \end{equation*}
