--- a/tex/body/M01.06-Instantaneity Of Velocity.tex
+++ b/tex/body/M01.06-Instantaneity Of Velocity.tex
@@ -23,13 +23,13 @@ $ t_2 $时间间隔内的平均速度:
 \begin{equation*}
   \langle v\rangle_{3 \rightarrow 5}=\frac{85-51}{5-3}=17\,\text{米/秒}
 \end{equation*}
-选两个时间间隔中平均速度是一样的。事实上，如果利用分析表
+这两个时间间隔中平均速度是一样的。事实上，如果利用分析表
 达式\eqref{eqn:01.05.01}~来计算，就会发现对任何时间间隔，运动的平均速度
 都是17米/秒。这种对于任何时间间隔平均速度总不变的运动，称
 为匀速直线运动。
 
 由表\ref{tab:01.05}~或$x=4.9t^2$所示的自由落体运动，情况就不同了：
-在第1秒末到第3秒束的问隔中，
+在第1秒末到第3秒末的间隔中，
 \begin{equation*}
   \langle v\rangle_{1 \rightarrow 3}=\frac{44.1-4.9}{3-1}=19.6\,\text{米/秒}
 \end{equation*}
@@ -104,7 +104,7 @@ $\Delta t$为无限小，或者相当于$\Delta t \rightarrow 0$的
 \begin{equation*}
   v\left(t\right)=\lim _{\Delta t \rightarrow 0} \frac{x\left(t+\Delta t\right)-x\left(t\right)}{\Delta t}
 \end{equation*}
-根据微积分学的知识，该极限就是轨迹函数$x\left(t\right)$对时间t的一阶
+根据微积分学的知识，该极限就是轨迹函数$x\left(t\right)$对时间$t$的一阶
 导数。即
 \begin{equation}
   \begin{aligned}
