--- a/tex/body/M01.10-Uniform Circular Motion.tex
+++ b/tex/body/M01.10-Uniform Circular Motion.tex
@@ -7,7 +7,7 @@
 \begin{equation}\label{eqn:01.10.01}
   v=\frac{2 \uppi r}{T}
 \end{equation}
-T为周期，比较式\eqref{eqn:01.10.01}、\eqref{eqn:01.09.03}，得到：
+$T$为周期，比较式\eqref{eqn:01.10.01}、\eqref{eqn:01.09.03}，得到：
 \begin{equation}\label{eqn:01.10.02}
   \omega=\frac{2 \uppi}{T}, \quad T=\frac{2 \uppi}{\omega}
 \end{equation}
@@ -47,7 +47,7 @@ $|\vec{v}\left(t\right)|=|\vec{v}\left(t+\Delta t\right)|=v$，由图\ref{fig:01
       & =v\lim_{\Delta t \rightarrow 0} \frac{|\Delta \varphi|}{\Delta t}=v \omega=r \omega^{2}=\frac{v^{2}}{r}
   \end{aligned}
 \end{equation}\vspace{0.5em}
-上式推导中利用了式\eqref{eqn:01.09.02}，\eqref{eqn:01.09.03}。因为$v$或$\omega$都不随$t$变，
+上式推导中利用了式\eqref{eqn:01.09.02}、\eqref{eqn:01.09.03}。因为$v$或$\omega$都不随$t$变，
 所以匀速圆周运动的加速度的大小也不随$t$变，但它的方向是时
 时变化的。根据图\ref{fig:01.23}，当$\Delta t\rightarrow 0$时，
 $\vec{v}\left(t+ \Delta t\right)-\vec{v}\left(t\right)=\Delta\vec{v}$的方
