修正第六章中的扫描错误

--- a/tex/body/M06.01-Conservation Of Mechanical Energy.tex
+++ b/tex/body/M06.01-Conservation Of Mechanical Energy.tex
@@ -10,7 +10,7 @@
 运转的行星，虽然它的位置及速度时刻在变化着，但总
 的来看，它的运动是周而复始地重复。一个钟摆的位置
 及速度也在时刻变化着，但总的来看，它的运动也是周
-而复始地重复。从高后处自由落下一个乒乓球，如果球
+而复始地重复。从高$ h _ { 0 } $处自由落下一个乒乓球，如果球
 台的弹性是理想的，则乒乓球会在$ h _ { 0 } $与球台之间弹跳不
 止，周而复始地上下运动(图\ref{fig:06.01})。这类的实例，还可举出不少。
 它们的共同特点是，在时刻变化的运动状态中，有某种不变的因
@@ -85,7 +85,7 @@
 \begin{equation}\label{eqn:06.01.05}
   \begin{aligned}
      & \quad \, \frac { 1 } { 2 } m v ^ { 2 } + m g z                                                                                                                                                    \\
-     & = \frac { 1 } { 2 } m \left( \frac { m } { m + m _ { A } } \right) ^ { 2 } g ^ { 2 } t ^ { 2 } + m g \left( h _ { 0 } - \frac { 1 } { 2 } \cdot \frac { m } { m + m _ { A } } g t _ { 2 } \right) \\
+     & = \frac { 1 } { 2 } m \left( \frac { m } { m + m _ { A } } \right) ^ { 2 } g ^ { 2 } t ^ { 2 } + m g \left( h _ { 0 } - \frac { 1 } { 2 } \cdot \frac { m } { m + m _ { A } } g t ^ { 2 } \right) \\
      & = m g h _ { 0 } - \frac { 1 } { 2 } m _ { A } \left( \frac { m } { m + m _ { A } } \right) ^ { 2 } g ^ { 2 } t ^ { 2 }
   \end{aligned}
 \end{equation}}
@@ -105,7 +105,7 @@ $ \dfrac { 1 } { 2 } m _ { A } v ^ { 2 } = \dfrac { 1 } { 2 } m _ { A } \left( \
   \frac { 1 } { 2 } m v ^ { 2 } + m g z + \frac { 1 } { 2 } m _ { A } v ^ { 2 } = \text{不变量}
 \end{equation}
 
-一般地说，对每个质量为m的质点，我们可以定义它的动能
+一般地说，对每个质量为$ m $的质点，我们可以定义它的动能
 为
 \begin{equation*}
   T = \frac { 1 } { 2 } m v ^ { 2 }
@@ -118,7 +118,7 @@ $ \dfrac { 1 } { 2 } m _ { A } v ^ { 2 } = \dfrac { 1 } { 2 } m _ { A } \left( \
 在于由这些量常常能构成一些不变量。在运动过程中，物体的动
 能和势能一般会发生变化，一物体的动能和势能之间会发生转化，
 物体之间的动能和势能也会发生转化。但对有些机械运动来说，
-参与运动的各物体的动能工及势能$ V $之和保持不变。物体体系的
+参与运动的各物体的动能$ T $及势能$ V $之和保持不变。物体体系的
 动能和势能总称为机械能。所以，这条规律又称为机械能守恒定
 律，可以表示成
 \begin{equation}\label{eqn:06.01.07}
@@ -135,7 +135,7 @@ $ \dfrac { 1 } { 2 } m _ { A } v ^ { 2 } = \dfrac { 1 } { 2 } m _ { A } \left( \
 那么，这些机械能是否不留痕迹地消失了？不是的，摩擦的
 % 170.jpg
 结果使接触面处的温度升高了。如自行车机械能消失了，路面与
-轮接触处温升的热能却作为“痕迹”留下了。温度是物质中分
+车轮接触处温升的热能却作为“痕迹”留下了。温度是物质中分
 子无规运动的表现。分子无规运动的动能愈高，物质的温度也愈
 高。所以，自行车的机械能并没有消失，而是转化成分子无规运
 动的能量，即物体的内能。这时机械能守恒定律\lhbrak 式\eqref{eqn:06.01.07}\rhbrak 不再
