--- a/tex/body/M06.02-Work.tex
+++ b/tex/body/M06.02-Work.tex
@@ -24,14 +24,14 @@ $ \langle P \rangle $称为$ t _ { 1 } $到$ t _ { 2 } $时间间隔内的平均
   P = \lim _ { \Delta t \to 0 } \frac { \Delta T } { \Delta t } = \frac { \dif T } { \dif t }
 \end{equation}
 
-为了弄清功、功率与他力学量之间的关系，我们首先来讨
+为了弄清功、功率与其他力学量之间的关系，我们首先来讨%
 \begin{figure}[h]
   \centering
   \includegraphics{figure/fig06.04}
   \caption{质点在力作用下的一维运动}
   \label{fig:06.04}
   \vspace{-0.8em}
-\end{figure}
+\end{figure}%
 论一维直线运动。如图\ref{fig:06.04}所示，质量为$ m $的质点在沿$ x $方向的力
 $ \vec{F} $作用下，$ t _ { 1 } $时刻在$ x _ { 1 } $ 处，$ t _ { 2 } $时刻运动到$ x _ 2 $。根据牛顿第二定律，有
 \begin{equation*}
