--- a/tex/body/M06.03-Gravitational Potential Energy.tex
+++ b/tex/body/M06.03-Gravitational Potential Energy.tex
@@ -79,7 +79,7 @@ $ a $到$ b $，引力作功仍然相同。
 此，由$ a $到$ b $，引力作功可写为
 \begin{equation}\label{eqn:06.03.01}
   \begin{aligned}
-    A & = \int \limits _{(l)} F \cdot \dif \vec{r} = \int _ { \vec{r}_a } ^ { \vec{r}_b } \vec{F} \cdot \dif \vec{r} = - \int _ { r _ a } ^ { r _ b } \frac { G m M } { r ^ { 2 } } \dif r \\
+    A & = \int \limits _{(l)} \vec{F} \cdot \dif \vec{r} = \int _ { \vec{r}_a } ^ { \vec{r}_b } \vec{F} \cdot \dif \vec{r} = - \int _ { r _ a } ^ { r _ b } \frac { G m M } { r ^ { 2 } } \dif r \\
       & = \frac { G m M } { r _ { b } } - \frac { G m M } { r _ { a } }
   \end{aligned}
 \end{equation}
