--- a/tex/body/M06.06-Consider Questions.tex
+++ b/tex/body/M06.06-Consider Questions.tex
@@ -6,7 +6,7 @@
 
   \question 若某力对物体不作功是否对物体运动就没有影响？
 
-  \question 子弹水平地射入一静止放置在光滑平面上的木块阻力对
+  \question 子弹水平地射入一静止放置在光滑平面上的木块。阻力对
   子弹作正功还是作负功？木块所受的力对木块作正功还是作负
   功？
 
@@ -49,7 +49,7 @@
   \question 把一挂着的铁链对折，使它的下端和上端挂在一起。若铁
   链质量为$ m $，长为$ l $，要作多少功？
 
-  \question 在高为的固定斜面顶上，一质量为$ m $的小物体由静止开
+  \question 在高为$ h $的固定斜面顶上，一质量为$ m $的小物体由静止开
   \begin{figure}[h]
     \centering
     \includegraphics{figure/fig06.14}
@@ -59,14 +59,14 @@
   \end{figure}
   % 190.jpg
   \clearpage\noindent
-  始下滑。求物体滑到斜面底时的速度大小若斜面是凹的或凸的
+  始下滑。求物体滑到斜面底时的速度大小；若斜面是凹的或凸的
   (图\ref{fig:06.14})结果怎样？
 
   \question 在地面附近(可以认为$ g $是常数)，以不大的初速度$ v_0 $上抛
   一个物体，不计空气阻力，问物体可上升多高？若以$ v _ { 0 } $斜抛此物，
   上升的最大高度又为多少？
 
-  \question 若忽略地球自转，不计空气阻力，试问，逃逸速度与发
+  \question 若忽略地球自转，不计空气阻力，试问，逃逸速度与发射
   方向有关吗？若考虑到地球的自转，人造行星应当向什么方向发
   射才比较有利？
 
