修正图 2.5 错误

--- a/tex/outline-of-mechanics.tex
+++ b/tex/outline-of-mechanics.tex
@@ -35,7 +35,7 @@
 \setcounter{page}{1}
 \setcounter{chapter}{-1}
 % 公式与上下文本距离调整
-\baselineskip=1.5em
+%\baselineskip=1.5em
 \lineskip=0.25em
 \lineskiplimit=0.25em
 \abovedisplayskip=0.25em plus 0.25em minus 0.25em
