修正 图 4.7、6.7 和公式 10.3.9、10.4.3、11.5.3 排版位置问题 ，尚未对照原书调整位置。

--- a/tex/body/M10.03-Kinetic Energy of Rigid Body.tex
+++ b/tex/body/M10.03-Kinetic Energy of Rigid Body.tex
@@ -100,7 +100,7 @@ $ \vec{r}'_i $是第$ i $个质点相对于质心的位置矢量，所以
 其中$ r_{Ai} $是质点$ m _ i $到通过$ A $的转轴的距离；$ I' $是车轮对通过$ A $且垂直
 于轮面的轴的转动惯量；$ \omega_{A} $是以$ A $为基点的角速度。我们已经知
 % 296.jpg
-道，刚体的角速度与基点的选取无关。故$ \omega _ { A } = \omega $， 所以\vspace{-1.56em}
+道，刚体的角速度与基点的选取无关。故$ \omega _ { A } = \omega $， 所以%\vspace{-1.56em}
 \begin{equation}\label{eqn:10.03.09}
   T = \frac { 1 } { 2 } I ^ { \prime } \omega ^ { 2 }
 \end{equation}
