--- a/tex/body/M11.05-Space-Time Idea of Relativity.tex
+++ b/tex/body/M11.05-Space-Time Idea of Relativity.tex
@@ -74,7 +74,7 @@ $ K ' $中观察者的测量结果；换言之，对$ K ' $静止的时钟，从
   \qquad
   t_{2}=\frac{t^{\prime}+\dfrac{v}{c^{2}} x_{2}^{\prime}}{\sqrt{1-\dfrac{v^{2}}{c^{2}}}}
 \end{equation*}
-所以对$ K $而言，这两个事件不是同时发生的。它们相隔的时间为\vspace{-1.56em}
+所以对$ K $而言，这两个事件不是同时发生的。它们相隔的时间为
 \begin{equation}\label{eqn:11.05.03}
   \begin{aligned}
     \Delta t & =t_{2}-t_{1}                                                                               \\
