修正几处排版问题

--- a/tex/body/M03.02-Newton's Second Law.tex
+++ b/tex/body/M03.02-Newton's Second Law.tex
@@ -112,7 +112,7 @@
 \eqref{eqn:03.02.01}既是定义又是定律、“身兼两任”的实质。
 
 (2) 式\eqref{eqn:03.02.05}中都是实验可以直接测定的量，也就是说，由
-式\eqref{eqn:03.02.01}所给出的预言是明确的，具有可验证性或可否证性。
+式\\\eqref{eqn:03.02.01}所给出的预言是明确的，具有可验证性或可否证性。
 
 (3) 物理学的规律，例如牛顿第二定律，都有一定的适用限
 度。在限度之外，牛顿第二定律不再成立。在牛顿第二定律不适
