--- a/tex/body/M04.09-Exercises.tex
+++ b/tex/body/M04.09-Exercises.tex
@@ -6,7 +6,7 @@
 克，悬杆的角偏转$ \theta = 3 . 9 6 \times 1 0 ^ { - 8 } $弧度，悬丝的扭转常数$ k = 8 . 3 4
   \times 1 0 ^ { - 8 } $千克$ \cdot $米$ ^2 $/秒$ ^2 $。试求$ G $之值。
 
-\exercise 试计算太阳对月球的引力$ F _ {\text{日}\to\text{月}} $以及地球对月亮的引力
+\exercise 试计算太阳对月球的引力$ F _ {\text{日}\to\text{月}} $以及地球对月亮的引力\\
 $ F _ {\text{月}\to\text{日}} $，并比较二者的大小。
 
 \exercise 已知地球中心与月球中心相距$ s = 3 . 8 4 \times 1 0 ^ 5 $公里，地球质
