修改绪论表1

--- a/tex/body/M00.00-Introduction.tex
+++ b/tex/body/M00.00-Introduction.tex
@@ -82,7 +82,7 @@
   \caption{物理学发展中的统一$^*$}\label{tab:00.01}
   \begin{tabular}{c}
     \toprule \vspace{-1em}            \\
-    \includegraphics{figure/tab00.01} \\
+    \includegraphics[scale=0.76]{figure/tab00.01} \\
     \bottomrule
     \zihao{6}* 括号中的数字表示相应的理论建立的年代；有问号的表示尚未完成。
   \end{tabular}
